# parking-management-py

./: '  .coverage  Dockerfile  Makefile  db_test.py  lc.py  openapi.json  pyproject.toml  requirements.txt  swagger.json
app/: constants.py  db_schemas.py  dependencies.py  main.py
app/dto/: billing.py  building.py  login.py  office.py  parking.py  register.py  vehicle.py
app/errors/: web_exception.py
app/models/: bill.py  building.py  floor.py  office.py  parking_history.py  roles.py  slot.py  user.py  vehicle.py
app/repository/: billing_repo.py  building_repo.py  floor_repo.py  office_repo.py  parking_repo.py  slot_repo.py  user_repo.py  vehicle_repo.py
app/routers/: __init__.py  auth.py  auth_router.py  billing_router.py  building_router.py  office_router.py  parking_router.py  vehicle_router.py
app/services/: auth.py  billing.py  building.py  office.py  parking.py  vehicle.py
app/utils/: alias_deserializer.py  jwt_utils.py  singleton.py
deployment/: cfn-app-nlb.yaml  cfn-app.yaml  cfn-ecr.yaml  cfn-hetero-scale.yaml  template.yaml
test/: test_auth_router.py  test_auth_service.py  test_billing_repo.py  test_billing_router.py  test_billing_service.py  test_building_repo.py  test_building_router.py  test_building_service.py  test_floor_repo.py  test_office_repo.py  test_office_router.py  test_office_service.py  test_parking_repo.py  test_parking_router.py  test_parking_service.py  test_slot_repo.py  test_user_repo.py  test_vehicle_repo.py  test_vehicle_router.py  test_vehicle_service.py
