[project]
name = "parking-management-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.18",
    "fastapi[standard]>=0.128.0",
    "mypy-boto3-dynamodb>=1.42.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "types-boto3>=1.42.18",
]
